# Cala

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  blinn_phong.cpp  culling.cpp  direct_shadows.cpp  example.cpp  gpuCulling.cpp  hello_triangle.cpp  indirect_draw.cpp  instanced.cpp  main.cpp  pbr.cpp  phong.cpp  point_shadows.cpp  vulkan_deferred.cpp  vulkan_raw.cpp
include/Cala/: AssetManager.h  Camera.h  Engine.h  ImGuiContext.h  Light.h  Material.h  MaterialInstance.h  Mesh.h  MeshData.h  Model.h  Probe.h  Program.h  RenderGraph.h  Renderer.h  Scene.h  Transform.h  lights.h  shaderBridge.h  shapes.h  util.h
include/Cala/backend/: ShaderInterface.h  primitives.h
include/Cala/backend/vulkan/: Buffer.h  CommandBuffer.h  CommandBufferList.h  CommandPool.h  Context.h  Device.h  Driver.h  Framebuffer.h  Handle.h  Image.h  OfflinePlatform.h  PipelineLayout.h  PipelineList.h  Platform.h  RenderPass.h  SDLPlatform.h  Sampler.h  SamplerArray.h  Semaphore.h  ShaderModule.h  ShaderModuleInterface.h  ShaderProgram.h  Swapchain.h  Timer.h  primitives.h
include/Cala/ui/: AssetManagerWindow.h  BackbufferView.h  BackbufferWindow.h  GuiWindow.h  ImageView.h  LightWindow.h  ProfileWindow.h  RenderGraphViewer.h  RenderGraphWindow.h  RendererSettingsWindow.h  ResourceViewer.h  SceneGraphWindow.h  StatisticsWindow.h  Window.h
include/Cala/vulkan/: Buffer.h  CommandBuffer.h  CommandPool.h  Context.h  Device.h  Framebuffer.h  Handle.h  Image.h  OfflinePlatform.h  PipelineLayout.h  Platform.h  RenderPass.h  SDLPlatform.h  Sampler.h  Semaphore.h  ShaderInterface.h  ShaderModule.h  ShaderModuleInterface.h  ShaderProgram.h  Swapchain.h  Timer.h  primitives.h
libs/: CMakeLists.txt
libs/Editor/: CMakeLists.txt
libs/Editor/include/Editor/: Editor.h  Panel.h
libs/Editor/src/: Editor.cpp
libs/ImGui/: ImGuiWindow.h  Stats.cpp  Stats.h
res/materials/: expanded_pbr.mat  pbr.mat  standard_pbr.mat
res/models/: sphere.glb
res/shaders/: bindings.glsl  blinn_phong.frag  bloom_composite.comp  bloom_downsample.comp  bloom_upsample.comp  brdf.comp  camera.glsl  clusters_debug.frag  compile.sh  create_clusters.comp  cull.comp  cull_direct_shadow.comp  cull_lights.comp  cull_mesh_shader.comp  cull_point_shadow.comp  default.comp  default.frag  default.mesh  default.task  default.vert  defaultIndirect.vert  defaultInstanced.vert  deferred.frag  deferred.vert  direct_shadow.frag  direct_shadow.vert  direct_shadow_cull.comp  equirectangularToCubeMap.comp  fullscreen.vert  gbuffer.frag  global_data.glsl  hdr.comp  hdr.frag  instancedCulled.vert  irradiance.comp  light_data.glsl  lighting.glsl  mesh_data.glsl  normals.geom  pbr.frag  (+21 more)
res/shaders/debug/: clusters_debug.frag  debug_depth.frag  debug_frustum.vert  debug_primitives.comp  debug_wireframe.comp  meshlet.frag  metallic.frag  normals.frag  roughness.frag  world_pos.comp  world_pos.frag
res/shaders/default/: default.frag  lit.frag  materialLoad.glsl  metallic.frag  normals.frag  roughness.frag  world_pos.frag
res/shaders/examples/: blinn_phong.frag  cullExample.comp  defaultIndirect.vert  defaultInstanced.vert  deferred.vert  direct_pbr.frag  direct_shadow.frag  direct_shadow.vert  instancedCulled.vert  phong.frag
res/shaders/shadow/: cull_direct_shadow.comp  cull_point_shadow.comp  direct_shadow.mesh  point_shadow.mesh  point_shadow.task  shadow.task
res/shaders/visibility_buffer/: debug_meshlets.comp  material_count.comp  material_offset.comp  pixel_positions.comp  visibility.frag  visibility.glsl  visibility.mesh  visibility_material.comp
res/shaders/voxel/: visualise.comp  visualise.frag  voxelize.frag  voxelize.geom  voxelize.vert  vxgi.glsl
src/: AssetManager.cpp  Camera.cpp  Engine.cpp  ImGuiContext.cpp  Light.cpp  Material.cpp  MaterialInstance.cpp  Mesh.cpp  MeshData.cpp  Model.cpp  Probe.cpp  Program.cpp  RenderGraph.cpp  Renderer.cpp  Scene.cpp  Transform.cpp  lights.cpp  shapes.cpp  util.cpp
src/backend/: ShaderInterface.cpp
src/backend/vulkan/: Buffer.cpp  CommandBuffer.cpp  CommandBufferList.cpp  CommandPool.cpp  Context.cpp  Device.cpp  Driver.cpp  Framebuffer.cpp  Handle.cpp  Image.cpp  OfflinePlatform.cpp  PipelineLayout.cpp  PipelineList.cpp  RenderPass.cpp  SDLPlatform.cpp  Sampler.cpp  SamplerArray.cpp  Semaphore.cpp  ShaderModule.cpp  ShaderModuleInterface.cpp  ShaderProgram.cpp  Swapchain.cpp  Timer.cpp
src/renderPasses/: debugPasses.cpp  debugPasses.h  shadowPasses.cpp  shadowPasses.h
src/ui/: AssetManagerWindow.cpp  BackbufferView.cpp  BackbufferWindow.cpp  GuiWindow.cpp  ImageView.cpp  LightWindow.cpp  ProfileWindow.cpp  RenderGraphViewer.cpp  RenderGraphWindow.cpp  RendererSettings.cpp  ResourceViewer.cpp  SceneGraphWindow.cpp  StatisticsWindow.cpp
src/vulkan/: Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  Context.cpp  Device.cpp  Framebuffer.cpp  Handle.cpp  Image.cpp  OfflinePlatform.cpp  PipelineLayout.cpp  RenderPass.cpp  SDLPlatform.cpp  Sampler.cpp  Semaphore.cpp  ShaderInterface.cpp  ShaderModule.cpp  ShaderModuleInterface.cpp  ShaderProgram.cpp  Swapchain.cpp  Timer.cpp
